# edi2

./: Cargo.toml  README.md
.cargo/: config
src/: commands.rs  edit.rs  gfx.rs  main.rs  owned_ref.rs  slotmap.rs  storage.rs  text_layout.rs  types.rs  util.rs  vis_tree.rs  win_util.rs  win_win_reent.rs
